[package]
name = "cloud_storage_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
mongodb = "2.5.0"
dotenv = "0.15.0"
cargo-watch = "8.4.0"
bcrypt = "0.14.0"
serde = "1.0.162"
serde_json = "1.0.96"
tower-http = { version = "0.3.4", features = ["cors"] }
tower-cookies = "0.9.0"
jsonwebtoken = "8.3.0"
chrono = "0.4.24"
time = { version = "0.3.21", features = ["std"] }
async-trait = "0.1"
futures = "0.3.28"
serde_qs = "0.12.0"
axum-swagger-ui = "0.2.2"
openapi = "0.1.5"
